array modifier "fit curve" mode not working properly #44361

Closed
opened 2015-04-12 12:59:03 +02:00 by mathieu menuet · 16 comments

System Information
all

Blender Version
Broken: 2.74

Short description of error
The full length of the curve is not used by the array modifier, the 2 last copies are missing

Exact steps for others to reproduce the error
Open attached file, above is the buggy "fit curve" version, under it the "fixed count" version, using the full length
test_curve_and_array.blend

**System Information** all **Blender Version** Broken: 2.74 **Short description of error** The full length of the curve is not used by the array modifier, the 2 last copies are missing **Exact steps for others to reproduce the error** Open attached file, above is the buggy "fit curve" version, under it the "fixed count" version, using the full length [test_curve_and_array.blend](https://archive.blender.org/developer/F161172/test_curve_and_array.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Added subscriber: @mont29

Added subscriber: @mont29

Yep, there is an error in how number of object is computed from curve length (missing a + 1). Note your curve is slightly too short though, you need to add a tiny bit of length to it to get the other 'missing' copy.

Yep, there is an error in how number of object is computed from curve length (missing a `+ 1`). Note your curve is slightly too short though, you need to add a tiny bit of length to it to get the other 'missing' copy.
Bastien Montagne self-assigned this 2015-04-13 10:50:43 +02:00

This issue was referenced by 4fb33d82e2

This issue was referenced by 4fb33d82e251e340d4ffee8efda62cfeb5c03135

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4fb33d82e2.

Closed by commit 4fb33d82e2.
Author

thanks for the fix :)

thanks for the fix :)

Added subscriber: @wigarsu

Added subscriber: @wigarsu

Actually I believe this is notthe correct behaviour - it was correct before the fix!

The manual says "Generates enough copies to fit within the length of the curve object specified in Curve."
I suppose it can be argued whether on a line of length n you can fit n or n+1 objectcs of size 1.

According to bliblu bli's version it would be n + 1, with the first and last object sticking out by one half unit over the ends of the curve - but then the total size of these objects would be one unit more than the length of the curve.

Also, the extra object causes problems if you close the curve, or join several of such curves into a chain.

Finally, one application of the array modifier together with the curve modifier would be to place objects along the segmentsof a polygon - but then a polygon with n vertices has only n-1 segments.

Actually I believe this is *not*the correct behaviour - it was correct before the fix! The manual says "Generates enough copies to fit within the length of the curve object specified in Curve." I suppose it can be argued whether on a line of length n you can fit n or n+1 objectcs of size 1. According to bliblu bli's version it would be n + 1, with the first and last object sticking out by one half unit over the ends of the curve - but then the total size of these objects would be one unit more than the length of the curve. Also, the extra object causes problems if you close the curve, or join several of such curves into a chain. Finally, one application of the array modifier together with the curve modifier would be to place objects along the *segments*of a polygon - but then a polygon with n vertices has only n-1 segments.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

In addition to my above comment, I would think that the endcap feature is meant to solve bliblu bli's problem. (at least for one of the two missing cubes - the other one is correctly taken into account by adding the epsilon in the fix).

In MOD_array.c, the line

count = (length + eps) / dist + 1;

should be

count = (length + eps) / dist;

In addition to my above comment, I would think that the *endcap* feature is meant to solve bliblu bli's problem. (at least for one of the two missing cubes - the other one is correctly taken into account by adding the epsilon in the fix). In MOD_array.c, the line `count = (length + eps) / dist + 1;` should be `count = (length + eps) / dist;`
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

@mont29 can you take a look at the fix?

@mont29 can you take a look at the fix?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

We can always argure on how fit to curev behaves, but this has nothing to do in this bug report. Should be handled through ML, get stakeholders artists on board to discuss what they want as behavior - keeping into mind that unless there is a really good reason for it, we'd rather not change behavior of working code, this would be really bad when opening older files.

This should never have been re-opened that way, bug tracker is to handle bug, not design tasks or feature requests.

We can always argure on how fit to curev behaves, but this has nothing to do in this bug report. Should be handled through ML, get stakeholders artists on board to discuss what they want as behavior - keeping into mind that unless there is a really good reason for it, we'd rather **not** change behavior of working code, this would be really bad when opening older files. This should never have been re-opened that way, bug tracker is to handle bug, not design tasks or feature requests.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44361
No description provided.