Fix T44361: array modifier "fit curve" mode not working properly

'tot_length / step_length' gives the number of 'segments', not the number of
copies - we have to add 1 here.